# rag-demo

./: README.md  pyproject.toml
app/: config.py  main.py
app/functions/: api_get_user.py
app/functions/embedding/: api_embedding.py
app/functions/user/: api_get_user.py
app/methods/: user.py
app/routers/: __init__.py  user.py
app/routers/embedding/: __init__.py  embedding.py
app/routers/user/: __init__.py  user.py
app/schemas/: __init__.py  embedding.py
app/services/: user.py
tests/: test_main.py
