[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "A minimal FastAPI project."
authors = ["linyusheng"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
google-genai = "^2.10.0"
faiss-cpu = "^1.14.3"

[tool.poetry.group.dev.dependencies]
httpx = ">=0.27.0"
pytest = ">=8.0.0"
ruff = ">=0.6.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
